Updated packages and corresponding models and interfaces. Fix for text overflow for selected file.

--- a/reflectionenumeratorwebui.client/src/components/components.css
+++ b/reflectionenumeratorwebui.client/src/components/components.css
@@ -42,6 +42,10 @@
 
 .selected-file-label {
     margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
 }
 
 .enumerate-button {
